Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/007_function_used_as_procedure.xi
f():int

g()
{
    f()
}

//@PRACOWNIA
//@should_not_typecheck
